[package]
name = "libopus"
version = "0.1.0"
authors = ["Lucian Carata <lc525@cam.ac.uk>",
           "Thomas Bytheway <tb403@cam.ac.uk>"]
build = "build.rs"

[build-dependencies]
cbindgen = { git = "https://github.com/eqrion/cbindgen.git" }

[lib]
name = "opus"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
futures = "*"
futures-cpupool = "*"
tokio-io = "*"
tokio-core = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
num_cpus = "1.0"
libc = "*"
nix = "0.9.0"
rayon = "0.8.2"
maplit = "*"
neo4j = {path = "modules/rusty-bolt/neo4j" }


[[bin]]
name = "opusctl"
path = "src/bin.rs"
