[package]
name = "libopus"
version = "0.1.0"
authors = ["Lucian Carata <lc525@cam.ac.uk>",
           "Thomas Bytheway <tb403@cam.ac.uk>"]
build = "src/build.rs"

[lib]
name = "opus"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
futures = "*"
futures-cpupool = "*"
tokio-io = "*"
tokio-core = "*"
packstream = {git = "https://github.com/technige/rusty-bolt.git", rev = "7b537d1"}
neo4j = {git = "https://github.com/technige/rusty-bolt.git", rev = "7b537d1"}

[build-dependencies]
rusty-cheddar = "*"

[[bin]]
name = "opusctl"
path = "src/bin.rs"
