[package]
name = "libopus"
version = "0.1.0"
authors = ["Lucian Carata <lc525@cam.ac.uk>",
           "Thomas Bytheway <tb403@cam.ac.uk>"]

[lib]
name = "opus"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
futures = "*"
futures-cpupool = "*"
tokio-io = "*"
tokio-core = "*"
serde_json = "*"
libc = "*"
packstream = {git = "https://github.com/HarkonenBade/rusty-bolt.git", branch = "master"}
neo4j = {git = "https://github.com/HarkonenBade/rusty-bolt.git", branch = "master"}


[[bin]]
name = "opusctl"
path = "src/bin.rs"
