[package]
name = "libopus"
version = "0.1.0"
authors = ["Lucian Carata <lc525@cam.ac.uk>",
           "Thomas Bytheway <tb403@cam.ac.uk>"]

[lib]
name = "opus"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
futures = "*"
futures-cpupool = "*"
tokio-io = "*"
tokio-core = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
num_cpus = "1.0"
libc = "*"
nix = "0.9.0"
packstream = {git = "https://github.com/HarkonenBade/rusty-bolt.git", branch = "master"}
neo4j = {git = "https://github.com/HarkonenBade/rusty-bolt.git", branch = "master"}


[[bin]]
name = "opusctl"
path = "src/bin.rs"
